# papers

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  run_tests.py
.claude/: .prompts.md
.claude/agents/: doc-translator.md
.claude/skills/batch-processor/: SKILL.md
.claude/skills/doc-translator/: SKILL.md
.claude/skills/heartfelt/: SKILL.md
.claude/skills/markdown-formatter/: SKILL.md
.claude/skills/pdf-reader/: SKILL.md
.claude/skills/translator/: SKILL.md
.claude/skills/web-translator/: SKILL.md
.claude/skills/zh-translator/: SKILL.md
.github/PULL_REQUEST_TEMPLATE/: auto-fix.md
.github/workflows/: auto-fix-ruff.yml  ci.yml  ruff.yml
Context Engineering/: Qwen-摘要.md
Context Engineering/translate/: Context-Engineering-for-Agents.md
GRAPH-GUIDED CONCEPT SELECTION FOR EFFICIENT RETRIEVAL-AUGMENTED GENERATION/: 愫读-2.md  愫读.md
GraphRAG/: 愫读-2.md  愫读.md
Knowledge Graphs/: 愫读 - Graph-Guided Concept Selection For Efficient Retrieval-Augmented Generation.md  愫读 - Knowledge graphs: Introduction, history, and perspectives.md  愫读.md
Knowledge Graphs/translate/: Graph-Guided Concept Selection For Efficient Retrieval-Augmented Generation.md  Knowledge graphs: Introduction, history, and perspectives.md
LLM/: 愫读 - #LLM_Transformers v5.md
LLM Agents/: A Comprehensive Survey on Reinforcement Learning-based Agentic Search: Foundations, Roles, Optimizations, Evaluations, and Applications.md  Agentic AI: a comprehensive survey of architectures, applications, and future directions.md  Agentic_Design_Patterns.md  Tool-to-Agent Retrieval: Bridging Tools and Agents for Scalable LLM Multi-Agent Systems.md  基于强化学习的智能体搜索综合综述：基础、角色、优化、评估与应用.md  愫读 - A Comprehensive Survey on Reinforcement Learning-based Agentic Search.md  愫读 - Tool-to-Agent Retrieval: Bridging Tools and Agents for Scalable LLM Multi-Agent Systems.md  愫读 - 基于强化学习的智能体搜索综合综述：基础、角色、优化、评估与应用.md  愫读 - 工具到智能体检索：连接工具与智能体的可扩展 LLM 多智能体系统.md
LLM Agents/Google/: Context Engineering_ Sessions & Memory.md  Prototype to Production.md  愫读 - Agent Tools & Interoperability with Model Context Protocol (MCP).md  愫读 - Context Engineering_ Sessions & Memory.md  愫读 - Introduction to Agents.md
LLM Agents/Google/heartfelt/: Agent Quality.md  Prototype to Production.md
LLM Agents/Google/translate/: Agent Quality.md
LLM Agents/backup/: Agentic Design Patterns_2.md
LLM Agents/heartfelt/: Agentic AI: a comprehensive survey of architectures, applications, and future directions」.md
LLM Agents/translate/: Agentic Design Patterns.md  Agentic Design Patterns_1.md
LLM/translate/: Transformers v5.md
agents/: __init__.py
agents/adk/: README.md
agents/api/: __init__.py  main.py
agents/api/models/: paper.py  task.py
agents/api/routes/: papers.py  tasks.py  websocket.py
agents/api/services/: paper_service.py  task_service.py  websocket_service.py
agents/claude/: README.md  __init__.py  base.py  batch_agent.py  heartfelt_agent.py  pdf_agent.py  skills.py  translation_agent.py  workflow_agent.py
agents/core/: __init__.py  config.py  exceptions.py  utils.py
api/: __init__.py  main.py
api/models/: __init__.py  paper.py
api/routes/: papers.py  tasks.py  websocket.py
api/services/: paper_service.py
core/: config.py  utils.py
docs/: 00-Planning.md  000-planning.md  000-roadmap.md  001-framework.md  003-user-guide.md  004-testing.md  005-github-actions.md  01-Framework.md  02-Development.md  03-User-Guide.md  04-Testing.md  05-GitHub-Actions.md
images/LLM_Agents_Agentic_Design_Patterns/: agent_structure.txt
papers/: README.md
papers/.metadata/: general_20251213_001208_test.pdf.json  general_20251213_094117_test.pdf.json
papers/heartfelt/Context Engineering/: Context Engineering 2.0: The Context of Context Engineering.md  Nested Learning: The Illusion of Deep Learning Architectures.md
papers/heartfelt/Knowledge Graphs/: Graph-Guided Concept Selection For Efficient Retrieval-Augmented Generation.md  Knowledge graphs: Introduction, history, and perspectives.md  愫读-2.md  愫读.md
papers/heartfelt/LLM/: LLM_Transformers v5.md
papers/heartfelt/LLM Agents/: Agentic AI: a comprehensive survey of architectures, applications, and future directions」.md  Tool-to-Agent Retrieval: Bridging Tools and Agents for Scalable LLM Multi-Agent Systems.md  Unleashing Self-Evolving Agents from Zero Data via Tool-Integrated Reasoning.md  基于强化学习的智能体搜索综合综述：基础、角色、优化、评估与应用.md
papers/heartfelt/LLM Agents/Google/: Agent Quality.md  Agent Tools & Interoperability with Model Context Protocol (MCP).md  Context Engineering_ Sessions & Memory.md  Introduction to Agents.md  Prototype to Production.md
papers/images/LLM_Agents_Agentic_Design_Patterns/: agent_structure.txt
papers/translation/Context Engineering/: Context-Engineering-for-Agents.md  Nested Learning: The Illusion of Deep Learning Architectures.md
papers/translation/Knowledge Graphs/: GRAPH.md  Graph-Guided Concept Selection For Efficient Retrieval-Augmented Generation.md  Knowledge graphs: Introduction, history, and perspectives.md
papers/translation/LLM/: DeepSeek_OCR.md  Transformers v5.md
papers/translation/LLM Agents/: Empowering Real-World: A Survey on the Technology, Practice, and Evaluation of LLM-driven Industry Agents.md  Tool-to-Agent Retrieval: Bridging Tools and Agents for Scalable LLM Multi-Agent Systems.md  Unleashing Self-Evolving Agents from Zero Data via Tool-Integrated Reasoning.md  基于强化学习的智能体搜索综合综述：基础、角色、优化、评估与应用.md
papers/translation/LLM Agents/Google/: Agent Quality.md  Agent Tools & Interoperability with Model Context Protocol (MCP).md  Context Engineering_ Sessions & Memory.md  Introduction to Agents.md  (+1 more)
scripts/: setup.sh
tests/agents/: README.md  conftest.py  run_tests.py
tests/agents/integration/: test_api_integration.py
tests/agents/unit/: test_batch_file_validation.py  test_final_coverage.py  test_simple_coverage.py  test_simple_method_calls.py
ui/: README.md  nginx.conf  package.json
(+33 files in other folders)
